--- a/index.html
+++ b/index.html
@@ -20,18 +20,7 @@
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "WebSite",
-  "name": "TechTools",
-  "url": "https://techtools.best",
-  "description": "Free online tools for YouTube creators, students and developers.",
-  "potentialAction": {
-    "@type": "SearchAction",
-    "target": "https://techtools.best/?q={search_term_string}",
-    "query-input": "required name=search_term_string"
-  }
-}
+{"@context":"https://schema.org","@type":"WebSite","name":"TechTools","url":"https://techtools.best","description":"Free online tools for YouTube creators, students and developers","author":{"@type":"Person","name":"Prahlad Yadav"},"potentialAction":{"@type":"SearchAction","target":"https://techtools.best/?q={search_term_string}","query-input":"required name=search_term_string"}}
 </script>
 <link rel="icon" href="img/logo.png" type="image/png">
 <link rel="preconnect" href="https://fonts.googleapis.com">
