--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
     <!-- <p class="ads-note">This site may display ads via Google AdSense to support free tool development. See our <a href="privacy.html">Privacy Policy</a> for details.</p> -->
   </div>
 </footer>
-
+<script src="https://quge5.com/88/tag.min.js" data-zone="215219" async data-cfasync="false"></script>
 <!-- ADSENSE -->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3666396936157058" crossorigin="anonymous"></script>
 <script>(function(s){s.dataset.zone='10664776',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
@@ -486,5 +486,6 @@ window.addEventListener('load', function() {
 </body>
 
 </html>
+
 
 
