--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     ezstandalone.cmd = ezstandalone.cmd || [];
 </script>
 <script src="//ezoicanalytics.com/analytics.js"></script>
+    <script data-cfasync="false" src="https://cmp.gatekeeperconsent.com/min.js"></script>
+<script data-cfasync="false" src="https://the.gatekeeperconsent.com/cmp.min.js"></script>
 </head>
 <body>
 
@@ -491,6 +493,7 @@ window.addEventListener('load', function() {
 </body>
 
 </html>
+
 
 
 
